# cc-catalog-search-client

./: README.md  WORKSPACE
src/main/java/io/confluent/catalog/search/client/: BUILD.bazel  CatalogSearchGrpcClient.java
src/main/proto/catalogsearch/v1/: BUILD.bazel  catalogsearch.proto
